# the-agentic-engineer

./: .gitignore  .mcp.json  .vale.ini  MIGRATION_COMPLETE.md  README.md  blog-config.yaml  build.py  publish.py  pyproject.toml  tag-registry.yaml
.claude/: settings.json
.claude/commands/: build.md  check-buffer.md  create-post.md  create-quality-build-publish.md  create-quality-review.md  create-social-quality-review.md  generate-socials.md  implement.md  mdx-quality-review.md  plan.md  prime.md  publish.md  quality-check.md  (+3 more)
docs/: architecture.md  home-assistant-research.md  shadcnblocks-setup.md
lib/: blogger_client.py  cloudinary_uploader.py  config.py  frontmatter.py  image_processor.py  markdown_converter.py  scheduling.py  social_validator.py  validator.py
specs/: agentic-saas-starter-product.md  blog-flow.md  blog-google-auth.md  blog-monetization.md  content-pipeline-migration.md  federal-engagements.md  managed-agents-comparison-research.md  nextjs-migration-resources.md  og-images-metadata.md  social-notifications-github-actions.md  taming-claude-yolo-blog-supplement.md  templates-page-design.md  vector-embeddings.md
tools/: add_tag.py  buffer_check.py  build.py  convert_to_webp.py  generate_embedding.py  generate_image.py  generate_refresh_token.py  get_blog_id.py  list_tags.py  move_post_date.py  next_publish_date.py  post_to_twitter.py  publish.py  seo_check.py  setup_check.py  sync_publish_status.py  test_auth.py  test_phase1.py  validate_all_social.py
website/: CLAUDE.md  README.md  components.json  next.config.ts  package.json  pnpm-lock.yaml
(+117 files in other folders)
