[project]
name = "agentic-engineer-blog"
version = "2.0.0"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=11.0.0",
    "PyYAML>=6.0.2",
    "python-dotenv>=1.0.1",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "tweepy>=4.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]
