[project]
name = "agentic-engineer-blog"
version = "2.0.0"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=12.2.0",
    "PyYAML>=6.0.3",
    "python-dotenv>=1.2.2",
    "openai>=2.0.0",
    "requests>=2.33.0",
    "tweepy>=4.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]
